# manabase

./: .gitignore  Makefile  README.md  manabase.py  manabase_test.py  pyproject.toml  remembering_model.py  remembering_model_test.py  requirements-dev.txt  requirements.txt  scratch.py
manabase/: lands.py  manabase_test.py
scripts/: run.py  scratch.py
src/manabase/: __init__.py  lands.py  manabase_test.py
src/manabase_solver/: decks.py  lands.py  manabase_solver.py  manabase_solver_test.py
